# mlops_sea_animal_classification

./: .dockerignore  .env  .gitignore  ChangeLog.md  Dockerfile  Jenkinsfile  Makefile  README.md  docker-compose.yml  duties.py  pyproject.toml  requirements-gitflow.txt  requirements.txt
.github/workflows/: production_api.yaml  production_pipeline.yaml  stagging_api.yaml  stagging_model.yaml  staging_api.yaml  staging_pipeline.yaml
config/: coverage.ini  flake8.ini  mypy.ini  pytest.ini
config/pipeline/: gcp_continuous_deployment_config.yaml  gcp_deployment_config.yaml  inference_config.yaml  local_continuous_deployment_config.yaml  local_inference_config.yaml  train_continous_deployment_config.yaml  training_config.yaml  training_kubeflow_config.yaml
exploration/: helper_functions.py  ingestion.ipynb  train_test_skew_analysis.ipynb  training.ipynb  visualisation.ipynb
exploration/model/: MLmodel  conda.yaml  python_env.yaml  requirements.txt
exploration/model/tfmodel/: keras_metadata.pb
exploration/model/tfmodel/variables/: variables.index
infra/jenkins/: Dockerfile  Jenkinsfile  README.md
infra/jenkins/jenkins/: Dockerfile
infra/kubeflow/: README.md  k3d_registry.yaml
infra/kubeflow/zenml/: Dockerfile  requirements.txt
infra/kubernetes/: README.md  setup.sh
infra/kubernetes/resources/: ingress.yaml
infra/legacy/jenkins/: docker-compose.yml
infra/legacy/jenkins/jenkins/: Dockerfile
infra/legacy/kubernetes/: README.md
infra/legacy/kubernetes/resources/: deployment.yaml  service.yaml
infra/legacy/mlflow/: docker-compose.yml
infra/legacy/mlflow/mlflow/: requirements.txt
infra/legacy/vault/: docker-compose.yml
infra/mlflow/: README.md  docker-compose.yml
infra/stacks/: setup_local_stack.sh
infra/vault/: README.md
infra/vault/vault/: Dockerfile  run.sh
infra/zenml_parent/: Dockerfile  requirements.txt
model/: keras_metadata.pb  saved_model.pb
model/variables/: variables.index
notebooks/: exploration.ipynb  training.ipynb
scripts/: check_service.py  register_kubeflow_stack.sh  register_local_stack.sh  register_mlflow_pipeline_tracking.sh  register_simple_stack.sh  register_update_local_stack.sh  reset_zenml.sh  run_gcp_continuous_deployment_pipeline.sh  run_gcp_deployment_pipeline.sh  run_inference_pipeline.sh  run_local_continous_deployment.sh  run_local_continuous_deployment.sh  run_local_inference.sh  run_train_continous_deployment_pipeline.sh  run_training_pipeline.sh  run_training_pipeline_kubeflow.sh  setup.sh  update_kubeflow_local_stack.sh  update_local_stack.sh
src/api/: api_functional.py  app.py
src/app/: main.py
src/app/routes/: security.py
src/application/: app.py
src/domain/: class_mapping.py  data_preparation.py  data_preprocessing.py  model.py
src/domain/pipeline/: gcp_continuous_deployment.py  gcp_deployment.py  inference.py  local_continuous_deployment.py  local_inference.py  pipeline.py  train.py  train_continuous_deployment.py  training.py  training_kubeflow.py
src/domain/steps/: data_loader.py  deployment_trigger.py  evaluator.py  mlflow_evaluator.py  mlflow_trainer.py  predictor.py  service_loader.py  skew_detector.py  trainer.py
src/env/: log_utils.py
src/io/: crud.py  models.py  mysql_database.py
stacks/legacy/: setup_remote_local_stack.sh
tests/api/: app_test.py
tests/app/: app_test.py
tests/application/: app_test.py
tests/domain/: data_preparation_test.py  model_test.py
tests_integration/: docker-compose.yml  start.sh
tests_integration/health/: Dockerfile  requirements.txt  test_api_health.py
tests_integration/predict/: Dockerfile  test_api_predict.py
tests_integration/security/: Dockerfile  test_api_security.py
