[project]
name = "sea_animal_classification"
version = "0.1"
description = "An MLOps example of a Sea Animal classification computer vision problem."
authors = [
    {name = "Thomas Binder", email = ""},
]
dependencies = [
    "opencv-python>=4.5.4.60",
    "zenml>=0.13.2",
    "tensorflow==2.8.0",
    "tensorflow-io==0.24.0",
    "python-dotenv>=0.21.0",
    "mlflow==1.24.0",
    "mlserver==0.5.3",
    "mlserver-mlflow==0.5.3",
    "itsdangerous==2.0.1",
    "werkzeug==2.0.3",
    "evidently==0.1.52dev0",
    "kfp==1.8.9",
    "s3fs==2022.3.0",
    "hvac>=1.0.2",
    "boto3==1.21.21",
]
requires-python = "==3.8.10"
license = {text = "MIT"}
[project.optional-dependencies]

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[tool]
[tool.pdm]

[tool.pdm.dev-dependencies]
test = [
    "pytest~=6.2",
    "pytest-cov~=2.12",
]
typing = [
    "mypy~=0.910",
]
format = [
    "black>22",
    "isort~=5.9",
]
quality = [
    "flake8~=3.9",
]
duty = [
    "duty~=0.7",
]
exploration = [
    "ipykernel>=6.15.3",
    "matplotlib>=3.5.3",
    "kaggle>=1.5.12",
    "scikit-learn>=1.1.2",
    "minio>=7.1.11",
]

[tool.black]
[tool.isort]
