[project]
name = "sea_animal_classification"
version = "1.0"
description = "An MLOps example of a Sea Animal classification computer vision problem."
authors = [
    {name = "Thomas Binder", email = ""},
]
dependencies = [
    "python-dotenv>=0.21.0",
    "requests>=2.28.1",
    "uvicorn>=0.17.6",
    "python-multipart>=0.0.5",
    "fastapi>=0.75.2",
    "sqlalchemy>=1.4.41",
    "mysql-connector-python>=8.0.31",
    "pillow>=9.4.0",
    "numpy>=1.21.6",
]
requires-python = "==3.8.10"
license = {text = "MIT"}
[project.optional-dependencies]

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[tool]
[tool.pdm]

[tool.pdm.dev-dependencies]
test = [
    "pytest~=6.2",
    "pytest-cov~=2.12",
]
typing = [
    "mypy~=0.910",
]
format = [
    "black>22",
    "isort~=5.9",
]
quality = [
    "flake8~=3.9",
]
duty = [
    "duty~=0.7",
]
exploration = [
    "ipykernel>=6.15.3",
    "matplotlib>=3.5.3",
    "kaggle>=1.5.12",
    "scikit-learn>=1.1.2",
]
industrialisation = [
    "kfp==1.8.16",
    "kserve==0.9.0",
    "tensorflow==2.8.0",
    "tensorflow-io==0.24.0",
    "evidently==0.1.54dev0",
    "zenml[server]==0.32.1",
    "mlflow==1.25.1",
    "google-cloud-storage>=2.7.0",
    "google-cloud-secret-manager>=2.15.1",
    "gcsfs>=2023.1.0",
    "google-cloud-aiplatform>=1.11.0",
    "google-cloud-functions>=1.8.3",
    "google-cloud-scheduler>=2.7.3",
    "torch-model-archiver>=0.7.0",
    "shapely<2.0",
]

[tool.black]
[tool.isort]
